fix image responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -188,9 +188,6 @@ main {
     left: 0;
     width: 100%;
   }
-  .hero-right img {
-    max-width: 480px;
-  }
 }
 @media only screen and (max-width: 335px) {
   .hero-cta a {
